CompilerPrograms/CL5/y.output
Terminals unused in grammar

   GE
   LE


Grammar

    0 $accept: Program $end

    1 Program: MAIN Block

    2 Block: '{' Code '}'
    3      | Code

    4 Code: Statement Code
    5     | Statement

    6 Statement: Expression ';'
    7          | Declaration
    8          | Conditional

    9 Conditional: IFStat
   10            | IFStat Else
   11            | While

   12 $@1: /* empty */

   13 IFStat: IF '(' Expression ')' $@1 '{' Code '}'

   14 $@2: /* empty */

   15 Else: ELSE $@2 '{' Code '}'

   16 $@3: /* empty */

   17 While: WHILE '(' Expression ')' $@3 '{' Code '}'

   18 Expression: Expression '+' Expression
   19           | Expression '-' Expression
   20           | Expression '*' Expression
   21           | Expression '/' Expression
   22           | Expression '<' Expression
   23           | Expression '>' Expression
   24           | Expression ET Expression
   25           | Expression NE Expression
   26           | NO
   27           | ID '=' Expression
   28           | ID

   29 Declaration: DataType Varlist ';'

   30 Varlist: ID ',' Varlist
   31        | ID '=' NO ',' Varlist
   32        | ID
   33        | ID '=' NO


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 17
')' (41) 13 17
'*' (42) 20
'+' (43) 18
',' (44) 30 31
'-' (45) 19
'/' (47) 21
';' (59) 6 29
'<' (60) 22
'=' (61) 27 31 33
'>' (62) 23
'{' (123) 2 13 15 17
'}' (125) 2 13 15 17
error (256)
MAIN (258) 1
IF (259) 13
ELSE (260) 15
WHILE (261) 17
ID (262) 27 28 30 31 32 33
NO (263) 26 31 33
DataType (264) 29
NE (265) 25
ET (266) 24
GE (267)
LE (268)


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
Program (28)
    on left: 1, on right: 0
Block (29)
    on left: 2 3, on right: 1
Code (30)
    on left: 4 5, on right: 2 3 4 13 15 17
Statement (31)
    on left: 6 7 8, on right: 4 5
Conditional (32)
    on left: 9 10 11, on right: 8
IFStat (33)
    on left: 13, on right: 9 10
$@1 (34)
    on left: 12, on right: 13
Else (35)
    on left: 15, on right: 10
$@2 (36)
    on left: 14, on right: 15
While (37)
    on left: 17, on right: 11
$@3 (38)
    on left: 16, on right: 17
Expression (39)
    on left: 18 19 20 21 22 23 24 25 26 27 28, on right: 6 13 17 18
    19 20 21 22 23 24 25 27
Declaration (40)
    on left: 29, on right: 7
Varlist (41)
    on left: 30 31 32 33, on right: 29 30 31


state 0

    0 $accept: . Program $end

    MAIN  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: MAIN . Block

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7
    '{'       shift, and go to state 8

    Block        go to state 9
    Code         go to state 10
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 17


state 3

   13 IFStat: IF . '(' Expression ')' $@1 '{' Code '}'

    '('  shift, and go to state 18


state 4

   17 While: WHILE . '(' Expression ')' $@3 '{' Code '}'

    '('  shift, and go to state 19


state 5

   27 Expression: ID . '=' Expression
   28           | ID .

    '='  shift, and go to state 20

    $default  reduce using rule 28 (Expression)


state 6

   26 Expression: NO .

    $default  reduce using rule 26 (Expression)


state 7

   29 Declaration: DataType . Varlist ';'

    ID  shift, and go to state 21

    Varlist  go to state 22


state 8

    2 Block: '{' . Code '}'

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7

    Code         go to state 23
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 9

    1 Program: MAIN Block .

    $default  reduce using rule 1 (Program)


state 10

    3 Block: Code .

    $default  reduce using rule 3 (Block)


state 11

    4 Code: Statement . Code
    5     | Statement .

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7

    $default  reduce using rule 5 (Code)

    Code         go to state 24
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 12

    8 Statement: Conditional .

    $default  reduce using rule 8 (Statement)


state 13

    9 Conditional: IFStat .
   10            | IFStat . Else

    ELSE  shift, and go to state 25

    $default  reduce using rule 9 (Conditional)

    Else  go to state 26


state 14

   11 Conditional: While .

    $default  reduce using rule 11 (Conditional)


state 15

    6 Statement: Expression . ';'
   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    NE   shift, and go to state 27
    ET   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ';'  shift, and go to state 35


state 16

    7 Statement: Declaration .

    $default  reduce using rule 7 (Statement)


state 17

    0 $accept: Program $end .

    $default  accept


state 18

   13 IFStat: IF '(' . Expression ')' $@1 '{' Code '}'

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 36


state 19

   17 While: WHILE '(' . Expression ')' $@3 '{' Code '}'

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 37


state 20

   27 Expression: ID '=' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 38


state 21

   30 Varlist: ID . ',' Varlist
   31        | ID . '=' NO ',' Varlist
   32        | ID .
   33        | ID . '=' NO

    '='  shift, and go to state 39
    ','  shift, and go to state 40

    $default  reduce using rule 32 (Varlist)


state 22

   29 Declaration: DataType Varlist . ';'

    ';'  shift, and go to state 41


state 23

    2 Block: '{' Code . '}'

    '}'  shift, and go to state 42


state 24

    4 Code: Statement Code .

    $default  reduce using rule 4 (Code)


state 25

   15 Else: ELSE . $@2 '{' Code '}'

    $default  reduce using rule 14 ($@2)

    $@2  go to state 43


state 26

   10 Conditional: IFStat Else .

    $default  reduce using rule 10 (Conditional)


state 27

   25 Expression: Expression NE . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 44


state 28

   24 Expression: Expression ET . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 45


state 29

   22 Expression: Expression '<' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 46


state 30

   23 Expression: Expression '>' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 47


state 31

   18 Expression: Expression '+' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 48


state 32

   19 Expression: Expression '-' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 49


state 33

   20 Expression: Expression '*' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 50


state 34

   21 Expression: Expression '/' . Expression

    ID  shift, and go to state 5
    NO  shift, and go to state 6

    Expression  go to state 51


state 35

    6 Statement: Expression ';' .

    $default  reduce using rule 6 (Statement)


state 36

   13 IFStat: IF '(' Expression . ')' $@1 '{' Code '}'
   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    NE   shift, and go to state 27
    ET   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ')'  shift, and go to state 52


state 37

   17 While: WHILE '(' Expression . ')' $@3 '{' Code '}'
   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    NE   shift, and go to state 27
    ET   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ')'  shift, and go to state 53


state 38

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression
   27           | ID '=' Expression .

    NE   shift, and go to state 27
    ET   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 27 (Expression)


state 39

   31 Varlist: ID '=' . NO ',' Varlist
   33        | ID '=' . NO

    NO  shift, and go to state 54


state 40

   30 Varlist: ID ',' . Varlist

    ID  shift, and go to state 21

    Varlist  go to state 55


state 41

   29 Declaration: DataType Varlist ';' .

    $default  reduce using rule 29 (Declaration)


state 42

    2 Block: '{' Code '}' .

    $default  reduce using rule 2 (Block)


state 43

   15 Else: ELSE $@2 . '{' Code '}'

    '{'  shift, and go to state 56


state 44

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression
   25           | Expression NE Expression .

    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 25 (Expression)


state 45

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   24           | Expression ET Expression .
   25           | Expression . NE Expression

    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 24 (Expression)


state 46

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   22           | Expression '<' Expression .
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 22 (Expression)


state 47

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   23           | Expression '>' Expression .
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    '+'  shift, and go to state 31
    '-'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 23 (Expression)


state 48

   18 Expression: Expression . '+' Expression
   18           | Expression '+' Expression .
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 18 (Expression)


state 49

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   19           | Expression '-' Expression .
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 19 (Expression)


state 50

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   20           | Expression '*' Expression .
   21           | Expression . '/' Expression
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    $default  reduce using rule 20 (Expression)


state 51

   18 Expression: Expression . '+' Expression
   19           | Expression . '-' Expression
   20           | Expression . '*' Expression
   21           | Expression . '/' Expression
   21           | Expression '/' Expression .
   22           | Expression . '<' Expression
   23           | Expression . '>' Expression
   24           | Expression . ET Expression
   25           | Expression . NE Expression

    $default  reduce using rule 21 (Expression)


state 52

   13 IFStat: IF '(' Expression ')' . $@1 '{' Code '}'

    $default  reduce using rule 12 ($@1)

    $@1  go to state 57


state 53

   17 While: WHILE '(' Expression ')' . $@3 '{' Code '}'

    $default  reduce using rule 16 ($@3)

    $@3  go to state 58


state 54

   31 Varlist: ID '=' NO . ',' Varlist
   33        | ID '=' NO .

    ','  shift, and go to state 59

    $default  reduce using rule 33 (Varlist)


state 55

   30 Varlist: ID ',' Varlist .

    $default  reduce using rule 30 (Varlist)


state 56

   15 Else: ELSE $@2 '{' . Code '}'

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7

    Code         go to state 60
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 57

   13 IFStat: IF '(' Expression ')' $@1 . '{' Code '}'

    '{'  shift, and go to state 61


state 58

   17 While: WHILE '(' Expression ')' $@3 . '{' Code '}'

    '{'  shift, and go to state 62


state 59

   31 Varlist: ID '=' NO ',' . Varlist

    ID  shift, and go to state 21

    Varlist  go to state 63


state 60

   15 Else: ELSE $@2 '{' Code . '}'

    '}'  shift, and go to state 64


state 61

   13 IFStat: IF '(' Expression ')' $@1 '{' . Code '}'

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7

    Code         go to state 65
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 62

   17 While: WHILE '(' Expression ')' $@3 '{' . Code '}'

    IF        shift, and go to state 3
    WHILE     shift, and go to state 4
    ID        shift, and go to state 5
    NO        shift, and go to state 6
    DataType  shift, and go to state 7

    Code         go to state 66
    Statement    go to state 11
    Conditional  go to state 12
    IFStat       go to state 13
    While        go to state 14
    Expression   go to state 15
    Declaration  go to state 16


state 63

   31 Varlist: ID '=' NO ',' Varlist .

    $default  reduce using rule 31 (Varlist)


state 64

   15 Else: ELSE $@2 '{' Code '}' .

    $default  reduce using rule 15 (Else)


state 65

   13 IFStat: IF '(' Expression ')' $@1 '{' Code . '}'

    '}'  shift, and go to state 67


state 66

   17 While: WHILE '(' Expression ')' $@3 '{' Code . '}'

    '}'  shift, and go to state 68


state 67

   13 IFStat: IF '(' Expression ')' $@1 '{' Code '}' .

    $default  reduce using rule 13 (IFStat)


state 68

   17 While: WHILE '(' Expression ')' $@3 '{' Code '}' .

    $default  reduce using rule 17 (While)
